k8s/userapi-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userapi
  namespace: userapi
  labels:
    app: userapi
spec:
  selector:
    matchLabels:
      app: userapi
  replicas: 2
  template:
    metadata:
      labels:
        app: userapi
    spec:
      containers:
      - name: userapi
        image: weepyadmin/plotly:dev
        imagePullPolicy: Always
        resources:
          limits:
            memory: 200Mi
            cpu: 1000m
          requests:
            cpu: 100m
            memory: 200Mi
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: dockerregistrykey
