k8s/userapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userapi
  namespace: userapi
  labels:
    app.kubernetes.io/instance: userapi
    app.kubernetes.io/name: userapi
spec:
  type: ClusterIP
  ports:
  - name: userapi
    port: 5000
    targetPort: traefik
    protocol: TCP
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: userapi
