k8s/userapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userapi-ingress
  namespace: userapi
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: userapi.weepytests.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: userapi-service
                port:
                  number: 80
